add refresh token to jwt and swagger documentation
