# services/api-gateway/docs/swagger.json
@@ -4,6 +4,32 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/refresh": {
+            "get": {
+                "description": "Refresh the access token by by generating a new one",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Refresh Token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/session": {
             "get": {
                 "description": "Get the currently authenticated user's session.",
@@ -19,6 +45,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/types.Session"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
                         }
                     }
                 }
@@ -52,7 +84,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.SwaggerSuccessResponse"
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
                         }
                     }
                 }
@@ -72,7 +110,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.SwaggerSuccessResponse"
+                            "type": "string"
                         }
                     }
                 }
@@ -107,6 +145,12 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
                         }
                     }
                 }
@@ -162,13 +206,12 @@
                 }
             }
         },
-        "utils.SwaggerSuccessResponse": {
+        "utils.Error": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
-                "data": {},
                 "message": {
                     "type": "string"
                 },
